# LAB4_bryan_banegas

./: CMakeLists.txt  README.md  canvas.cpp  canvas.h  circulo.cpp  circulo.h  figura.cpp  figura.h  mainwindow.cpp  mainwindow.h  rectangulo.cpp  rectangulo.h  triangulo.cpp  triangulo.h
